# ONSdigital.blaise-nifi-receipt

./: .gcloudignore  .gitignore  .mypy.ini  Makefile  README.md  main.py  pyproject.toml  receipt.py
tests/: test_main.py  test_receipt.py
tests/features/: environment.py  receipt.feature
tests/features/steps/: steps.py
