[tool.poetry]
name = "nifi_receipt"
version = "0.1.0"
description = ""
authors = ["Sam Bryant <srbry@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.25.1"
blaise-dds = {git = "https://github.com/ONSdigital/blaise-data-delivery-status-client.git", rev = "main"}

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.3"
behave = "^1.2.6"
isort = "^5.8.0"
black = "^24.0.0"
mypy = "^1.9"
flake8 = "^6.0.0"
flake8-cognitive-complexity = "^0.1.0"
requests-mock = "^1.8.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
