[tool.poetry]
name = "nifi_receipt"
version = "0.1.0"
description = ""
authors = ["Sam Bryant <srbry@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
blaise-dds = {git = "https://github.com/ONSdigital/blaise-data-delivery-status-client.git", rev = "v1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
py = "^1.11"
urllib3 = ">=1.26.16,<2.6"
six = "^1.17.0"
behave = "^1.3.0"
isort = "^5.8.0"
black = "^24.0.0"
mypy = "^1.9"
flake8 = "^6.0.0"
flake8-cognitive-complexity = "^0.1.0"
requests-mock = "^1.8.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
