[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
blaise-dds = {git = "https://github.com/ONSdigital/blaise-data-delivery-status-client.git", rev = "v1.0.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
py = "^1.11.0"
urllib3 = "^2.5.0"
six = "^1.17.0"
behave = "^1.3.1"
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.17.1"
flake8 = "^7.3.0"
flake8-cognitive-complexity = "^0.1.0"
requests-mock = "^1.12.1"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"

[tool.mypy]
python_version = "3.13"
disallow_untyped_calls = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
